--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
+/* Estilos para pantallas pequeñas com celulares  */
+@media (max-width: 768px) {
+  .App {
+    font-size: 16px; /* Ajusta el tamaño de fuente para pantallas más pequeñas */
+  }
+}
+/* mis estilos los de arriba */
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
