--- a/src/style/LandingPage.css
+++ b/src/style/LandingPage.css
@@ -22,15 +22,24 @@
     transition: transform 0.3s ease; 
   }
   
-  .landigPageLink:hover {
-    transform: scale(1.1);
-  }
-  
   .lagarra {
     width: 20vh; 
     height: 20vh; 
+    animation: pulse 1s infinite;
   }
   .contenGarra h3{
     margin-left: -10rem;
     color: rgb(5, 5, 5);
+   
+  } 
+  @keyframes pulse {
+    0% {
+      transform: scale(1); /* Tamaño original */
+    }
+    50% {
+      transform: scale(1.1); /* Escala al 110% del tamaño original */
+    }
+    100% {
+      transform: scale(1); /* Vuelve al tamaño original */
+    }
   }
