--- a/src/style/header.css
+++ b/src/style/header.css
@@ -1,10 +1,9 @@
 .boxheader {
-    display: grid;
-    place-items: center;
-    background: linear-gradient(rgba(0, 0, 0, 0.644), rgba(0, 0, 0, 0.5)),
-                url('../img/534645.jpg') center/cover;
-    height: 73vh;
-    width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: #000000;
+  height: 40vh;
+  width: 100%;
 }
 
 .minbox {
